<resources>
    <string name="app_name">PokéGéo</string>
    <string name="pokedex_title">Pokédex</string>
    <string name="pokedex_subtitle">Search for a Pokémon</string>
    <string name="pokemon_image_desc">Pokémon Image</string>
    <string name="pokemon_details_about">About</string>
    <string name="pokemon_details_species">Species</string>
    <string name="pokemon_details_height">Height</string>
    <string name="pokemon_details_weight">Weight</string>
    <string name="pokemon_details_abilities">Abilities</string>
    <string name="pokemon_details_stats">Stats</string>
    <string name="pokemon_details_hp">HP</string>
    <string name="pokemon_details_attack">Attack</string>
    <string name="pokemon_details_defense">Defense</string>
    <string name="pokemon_details_sp_atk">Sp.Atk</string>
    <string name="pokemon_details_sp_def">Sp.Def</string>
    <string name="pokemon_details_speed">Speed</string>
    <string name="pokemon_details_total">Total</string>
    <string name="go_back_icon">Go Back Icon</string>
    <string name="inventory_item_img_desc">Inventory Item</string>
    <string name="inventory_subtitle">Looking for an object ?</string>
    <string name="inventory_title">Inventory</string>
    <string name="caught_title">Caught</string>
    <string name="caught_subtitle">Your crazy collection !</string>
    <string name="caught_pokemon_img_desc">Caught Pokémon</string>
    <!-- Spash -->
    <string name="wolodia_yannis"><![CDATA[Wolodia & Yannis]]></string>
    <string name="app_icon_description">App icon</string>
    <string name="pika_github_icon_desc">Github with pikachu\'s tail</string>
    <string name="loading">Loading ...</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="generation">Generation</string>
    <!-- Login/register -->
    <string name="password">Password :</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email :</string>
    <string name="pseudo">Pseudo :</string>
    <string name="confirm_password">Confirm\npassword :</string>
    <string name="i_m_not_a_robot">I\'m not a robot</string>
    <string name="example_email">example@pokegeo.com</string>
    <string name="pseudo_example">pseudo</string>
    <string name="password_example">password</string>
    <string name="same_password_example">same password</string>
    <string name="return_text">Return</string>
    <!-- Init texts -->
    <string name="init_text_01">Hey ! Welcome to PokeGéo ! I am the professor. My name is Sycamore ! </string>
    <string name="init_text_02">Let me introduce you, the pokemon you can choose !</string>
    <string name="init_text_03">Choose the one you want !</string>
    <string name="init_text_04">Super Choice ! Have a good day :3 </string>
    <string name="init_text_bulbasaur_choice">Bulbasaur ? Is that the one you want ?</string>
    <string name="init_text_charmander_choice">Charmander ? Is that the one you want ?</string>
    <string name="init_text_squirtle_choice">Squirtle ? Is that the one you want ?</string>
    <string name="pokecenter_background_desc">Pokecenter background</string>
    <string name="pillar_1_desc">Pillar 1</string>
    <string name="starter_1_desc">Starter 1</string>
    <string name="pillar_3_desc">Pillar 3</string>
    <string name="starter_2_desc">Starter 2</string>
    <string name="pillar_2_desc">Pillar 2</string>
    <string name="starter_3_desc">Starter 3</string>
    <string name="professor_sycanore_desc">Professor sycanore</string>
    <string name="button_yesss_txt">YESSS !</string>
    <string name="button_fight">Fight</string>
    <string name="button_pokemon">Pokémon</string>
    <string name="button_bag">Bag</string>
    <string name="button_run">Run</string>
    <string name="wild_pokemon">Wild Pokémon</string>
    <string name="player_pokemon">Player Pokémon</string>
    <string name="pokeball_desc">Pokéball</string>
    <string name="pokemoney_desc">pokemoney</string>

    <!-- Profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_subtitle">Your profile</string>
    <string name="avatar">Avatar</string>
    <string name="user_profile_description">User profile</string>
    <string name="tokens_title">Tokens</string>
    <string name="experience_title">Experience</string>
    <string name="user_profile_image_desc">user profile image</string>
    <string name="playing_time_title">Playing time :</string>
    <string name="items_used_title">Items used :</string>
    <string name="poke_encountered_title">Pokémon encountered :</string>
    <string name="poke_encountered_replace">\? Pokémon</string>
    <string name="items_used_replace">\? Items</string>
    <string name="hours_played_replace">\? Hours</string>
    <string name="logout_title">Logout</string>
    <string name="distance_travelled_title">Distance travelled :</string>
    <string name="km_replace">\? Km</string>
    <string name="friends">Friends</string>
    <string name="requests">requests</string>
    <string name="plus">+</string>
</resources>