<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF100">


        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/baloo_bhai_2"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="33sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pika_face" />

        <TextView
            android:id="@+id/owners_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai_2"
            android:text="@string/wolodia_yannis"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/github_pika_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/github_pika_logo"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/github_pika"
            app:layout_constraintEnd_toEndOf="@+id/owners_names"
            app:layout_constraintStart_toStartOf="@+id/owners_names"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/pika_github_icon_desc" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pika_face"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/avd_anim_pika_launcher_rounded"
            android:background="@drawable/avd_anim_pika_launcher_rounded"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/app_icon_description" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:progressBackgroundTint="#4E4E4E"
            android:progressTint="#EB1C24"
            android:progressDrawable="@drawable/progress_bar"
            app:layout_constraintBottom_toTopOf="@id/owners_names"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/progress_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai_2"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>